# forge-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
configs/: default.toml  mcp.example.toml
configs/personas/: analyst.toml  assistant.toml  coder.toml  commander.toml  devops.toml  researcher.toml  writer.toml
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: checkpoint.rs  context.rs  core_loop.rs  cost_tracker.rs  episodic_memory.rs  executor.rs  lib.rs  mock.rs  planner.rs  prepare.rs  project_analyzer.rs  reflector.rs  skill.rs  skill_context.rs  stream.rs  sub_agent.rs  tool_dispatch.rs  trace_error.rs  trace_recorder.rs  trace_replayer.rs  trace_writer.rs  verifier.rs
crates/forge-agent/tests/: trace_writer_test.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: cost.rs  lib.rs  llm.rs  loader.rs  logging.rs  memory.rs  model.rs  proxy.rs  session.rs  tools.rs  tracing.rs  ui.rs
crates/forge-config/tests/: tracing_test.rs
crates/forge-domain/: Cargo.toml
crates/forge-domain/src/: agent_output.rs  cost.rs  error.rs  event.rs  lib.rs  tool.rs  trace.rs
crates/forge-infra/: Cargo.toml
crates/forge-infra/locales/en-US/: main.ftl
crates/forge-infra/locales/zh-CN/: main.ftl
crates/forge-infra/src/: http.rs  i18n.rs  lib.rs  logging.rs  secret.rs  storage.rs  token.rs
crates/forge-infra/src/sandbox/: fallback.rs  mod.rs  unix.rs
crates/forge-llm/: Cargo.toml
crates/forge-llm/src/: anthropic.rs  auth.rs  base.rs  error.rs  factory.rs  gemini.rs  lib.rs  middleware.rs  ollama.rs  openai.rs  provider.rs  retry.rs  stream.rs  structured.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: client.rs  detect.rs  lib.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: auth.rs  client.rs  health.rs  lib.rs  security.rs  transport.rs  types.rs  wrapper.rs
crates/forge-memory/: Cargo.toml
crates/forge-memory/src/: error.rs  index_manager.rs  lib.rs  loader.rs  migration.rs  tests.rs  types.rs  writer.rs
crates/forge-napi/: Cargo.toml  build.rs  package-lock.json  package.json
crates/forge-napi/npm/darwin-arm64/: package.json
crates/forge-napi/npm/darwin-x64/: package.json
crates/forge-napi/npm/linux-arm64-gnu/: package.json
crates/forge-napi/npm/linux-x64-gnu/: package.json
crates/forge-napi/npm/win32-x64-msvc/: package.json
crates/forge-napi/src/: config.rs  error.rs  events.rs  lib.rs  sdk.rs  session.rs  skills.rs  stream.rs  tools.rs  workflow.rs
crates/forge-prompt/: Cargo.toml
crates/forge-prompt/src/: context.rs  error.rs  lib.rs  loader.rs  manager.rs  persona.rs
crates/forge-python/: Cargo.toml  pyproject.toml
crates/forge-python/src/: config.rs  event.rs  lib.rs  session.rs
crates/forge-sdk/: Cargo.toml
crates/forge-sdk/src/: builder.rs  config.rs  error.rs  event.rs  lib.rs  session.rs  types.rs
crates/forge-sdk/src/extensions/: keychain.rs  mcp.rs  mod.rs  skill.rs
crates/forge-sdk/src/sdk/: confirmation.rs  mcp.rs  memory.rs  mod.rs  persona.rs  process.rs  proxy.rs  session.rs  tools.rs
crates/forge-session/: Cargo.toml
crates/forge-session/src/: context.rs  history.rs  lib.rs  manager.rs  memory.rs  persistence.rs  wal.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools-coding/: Cargo.toml
crates/forge-tools-coding/src/: lib.rs  lsp.rs  symbols.rs
crates/forge-tools/src/: background.rs  description.rs  hardcoded_safety.rs  lib.rs  metrics.rs  params.rs  path_utils.rs  permission.rs  permission_policy.rs  schema.rs  security.rs  shell_path.rs  trust_level.rs  trust_permission.rs
crates/forge-tools/src/builtin/: ask_user.rs  batch.rs  edit.rs  enter_plan_mode.rs  exit_plan_mode.rs  git.rs  glob.rs  grep.rs  kill_shell.rs  memory_manage.rs  memory_read.rs  memory_write.rs  mod.rs  read.rs  skill.rs  task.rs  task_output.rs  todo.rs  web_fetch.rs  web_search.rs  write.rs
crates/forge-tools/src/builtin/shell/: alias.rs  common.rs  mod.rs
crates/forge-tools/src/builtin/shell/unix/: bash.rs  dangerous.rs  mod.rs
crates/forge-tools/src/builtin/shell/windows/: dangerous.rs  mod.rs  powershell.rs
crates/forge-tools/src/platform/: mod.rs  paths.rs  process.rs
crates/forge-tools/src/plugin/: mod.rs  script.rs
crates/forge-workflow/: Cargo.toml
crates/forge-workflow/src/: checkpoint.rs  default_executor.rs  error.rs  expression.rs  graph.rs  lib.rs  node.rs  state.rs  template.rs  tests.rs
crates/forge-workflow/src/definition/: changes.rs  convert.rs  mod.rs  types.rs
crates/forge-workflow/src/executor/: config.rs  error.rs  event.rs  mod.rs
crates/forge-workflow/src/persistence/: file_checkpoint.rs  file_store.rs  mod.rs  store.rs
docs/: architecture.md  ci-release.md  persona-guide.md  plugin-guide.md  sdk-guide.md  tracing-design.md
prompts/: system.md
prompts/personas/: analyst.md  assistant.md  coder.md  commander.md  devops.md  researcher.md  writer.md
prompts/skills/commit/: SKILL.md
prompts/skills/review/: SKILL.md
prompts/subagents/: analyst.md  explore.md  general.md  plan.md  research.md  writer.md
prompts/templates/: data_analysis.md  error_recovery.md  git_protocol.md  security.md  tool_usage.md  writing.md
prompts/tools/: ask_user.md  bash.md  batch.md  edit.md  git.md  glob.md  grep.md  read.md  symbols.md  task.md  todo_write.md  web_fetch.md  web_search.md  write.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: agent_integration.rs  coder_tests.rs  general_assistant_tests.rs  persona_tests.rs  plugin_tests.rs  sdk_integration.rs  tools_integration.rs
