[package]
name = "forge-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core agent logic for Forge — agent loop, tool dispatch, reflection, and sub-agents"

[dependencies]
forge-domain.workspace = true
forge-config.workspace = true
forge-infra.workspace = true
forge-llm.workspace = true
forge-session.workspace = true
forge-tools.workspace = true
forge-prompt.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream = "0.1"
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
aho-corasick.workspace = true
dashmap.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
