[package]
name = "forge-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration system for the Forge AI agent engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
