[package]
name = "forge-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure utilities for the Forge AI agent engine"

[dependencies]
forge-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
