[package]
name = "forge-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Infrastructure utilities for the Forge AI agent engine"

[dependencies]
forge-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

# i18n (internationalization)
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"
sys-locale = "0.3"
intl-memoizer = "0.5"

# Secure credential storage (system keychain)
keyring = "3"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
