[package]
name = "forge-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LSP client manager for Forge code intelligence"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
