[package]
name = "forge-mcp"
description = "MCP (Model Context Protocol) client for the Forge AI agent engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
forge-domain = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Crypto (OAuth PKCE)
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = { workspace = true }

# Filesystem
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
