[package]
name = "forge-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory management system for the Forge AI agent engine"

[dependencies]
forge-infra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
