[package]
name = "forge-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session management for Forge — lifecycle, context, history, WAL persistence"

[dependencies]
forge-infra.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
lru.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
