[package]
name = "forge-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool system for Forge — registry, built-in tools, permissions, and script plugins"

[dependencies]
forge-config.workspace = true
forge-domain.workspace = true
forge-infra.workspace = true
forge-lsp.workspace = true
forge-memory.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
reqwest.workspace = true

# For file operations
glob = "0.3"
ignore = "0.4"

# For task tool
uuid = { version = "1.0", features = ["v4"] }

# For web_fetch tool - HTML to text conversion
html2text = "0.12"

# For web_search tool - URL encoding
urlencoding = "2.1"

# For tool metrics - concurrent map
dashmap.workspace = true

# For batch tool - parallel execution
futures = "0.3"

# For tool description loader - config directory
dirs = "5.0"

# For PowerShell command encoding (Windows)
base64 = "0.22"

# For hardcoded safety - lazy static initialization
once_cell = "1.19"

# For shell command path extraction
shell-words = "1.1"
shellexpand = "3.1"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
toml = "0.8"
